--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
   "version": "0.9.7",
   "private": true,
   "description": "Wild Chat Remake",
-  "main": "dist/perplex-chat.html",
   "scripts": {
-    "build": "rimraf dist && npm run build-css && npm run build-js",
-    "build-js": "parcel build src/perplex-chat.html --detailed-report",
+    "build": "npx rimraf dist && npm run build-css && npm run build-js",
+    "build-js": "parcel build src/perplex-chat.html",
     "build-css": "node-sass sass/stylesheet.scss src/css/stylesheet.css --output-style compressed",
     "start": "npm run build && npm run python3-http-server",
-    "python3-http-server": "cd ./dist/ && python -m http.server",
+    "python3-http-server": "cd ./dist/ && python3 -m http.server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Karar Al-Remahy",
@@ -18,20 +17,28 @@
     "@babel/core": "^7.11.6",
     "@typescript-eslint/eslint-plugin": "^4.3.0",
     "@typescript-eslint/parser": "^4.3.0",
+    "assert": "^2.1.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
     "eslint": "^7.10.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
+    "events": "^3.3.0",
+    "node-sass": "^9.0.0",
     "parcel": "^2.0.0-nightly.415",
+    "process": "^0.11.10",
     "rimraf": "^3.0.2",
-    "typescript": "^4.0.3"
+    "stream-browserify": "^3.0.0",
+    "typescript": "^4.0.3",
+    "util": "^0.12.5",
+    "vm-browserify": "^1.1.2"
   },
   "dependencies": {
+    "@mastondzn/dank-twitch-irc": "^7.0.1",
     "@types/node": "^14.11.2",
-    "dank-twitch-irc": "^4.1.0",
-    "node-sass": "^4.14.1",
     "uhtml": "^2.1.2"
   }
 }
